--- a/modul  4 tes 2.html
+++ b/modul  4 tes 2.html
@@ -1,108 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Perpustakaan SUKA BACA</title>
-    <link rel="stylesheet" href="bootstrap.css">
-    <style>
-       .col-md-4 {
-            margin-bottom: 20px; 
-        }
-    </style>
+	<title>Website Perpustakaan SUKA BACA</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<style>
+		.col-md-4 {
+			background-color: #f0f0f0;
+			padding: 20px;
+			border: 1px solid #ddd;
+		}
+	</style>
 </head>
 <body>
-
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Perpustakaan SUKA BACA</a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Homepage</a></li>
-                            <li><a href="#">Profil Perpustakaan</a></li>
-                            <li><a href="#">Audio dan Video</a></li>
-                            <li><a href="#">Formulir Keanggotaan Perpustakaan</a></li>
-                            <li><a href="#">Tabel Bahan, Pemesanan, dan Perpanjangan Peminjaman Buku</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Selamat Datang di Website Perpustakaan SUKA BACA</h2>
-                <h3>Website ini dibuat untuk memenuhi tugas modul 4 mata kuliah pemrograman web praktik</h3>
-            </div>
-
-            <div class="col-md-4">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Judul Buku</th>
-                            <th>Pengarang</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Harry Potter</td>
-                            <td>J.K. Rowling</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Lord of the Rings</td>
-                            <td>J.R.R. Tolkien</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Jane Eyre</td>
-                            <td>Charlotte Bronte</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div class="col-md-4">
-                <form>
-                    <div class="form-group">
-                        <label for="nama">Nama:</label>
-                        <input type="text" class="form-control" id="nama" placeholder="Masukkan Nama">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" placeholder="Masukkan Email">
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Nomor Telepon:</label>
-                        <input type="tel" class="form-control" id="phone" placeholder="Masukkan Nomor Telepon">
-                    </div>
-                    <div class="form-group">
-                        <label for="alamat">Alamat:</label>
-                        <textarea class="form-control" id="alamat" rows="3" placeholder="Masukkan Alamat"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Perpustakaan SUKA BACA</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Buku
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Fiksi</a>
+						<a class="dropdown-item" href="#">Non-Fiksi</a>
+						<a class="dropdown-item" href="#">Buku Anak</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Akun
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Login</a>
+						<a class="dropdown-item" href="#">Daftar</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<h2>Selamat Datang di Website Perpustakaan SUKA BACA</h2>
+			</div>
+			<div class="col-md-4">
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th>No.</th>
+							<th>Judul Buku</th>
+							<th>Pengarang</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>Negeri 5 Menara</td>
+							<td>Ahmad Fuadi</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Ayat-Ayat Cinta</td>
+							<td>Habiburrahman El-Shirazy</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Di Atas Sajadah Cinta</td>
+							<td>Habiburrahman El-Shirazy</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Ketika Cinta Bertasbih</td>
+							<td>Habiburrahman El-Shirazy</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Perahu Kertas</td>
+							<td>Dee Lestari</td>
+						</tr>
+						<tr>
+							<td>6</td>
+							<td>Filosofi Kopi</td>
+							<td>Dee Lestari</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td>Madre</td>
+							<td>Oka Rusmini</td>
+						</tr>
+						<tr>
+							<td>8</td>
+							<td>Supernova</td>
+							<td>Dee Lestari</td>
+						</tr>
+						<tr>
+							<td>9</td>
+							<td>5 CM</td>
+							<td>Donny Dhirgantoro</td>
+						</tr>
+						<tr>
+							<td>10</td>
+							<td>Laskar Pelangi</td>
+							<td>Andrea Hirata</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+   <div class="col-md-4">
+  <form>
+    <div class="form-group">
+      <label for="nama">Nama:</label>
+      <input type="text" class="form-control" id="nama" placeholder="Masukkan nama">
     </div>
-
-    <script src="bootstrap.js"></script>
-    <script src="bootstrap.min.js"></script>
-</body>
-</html>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="email" placeholder="Masukkan email">
+    </div>
+    <div class="form-group">
+      <label for="no_telp">No Telp:</label>
+      <input type="tel" class="form-control" id="no_telp" placeholder="Masukkan no telp">
+    </div>
+    <div class="form-group">
+      <label for="usia">Usia:</label>
+      <input type="number" class="form-control" id="usia" placeholder="Masukkan usia">
+    </div>
+    <div class="form-group">
+      <label for="instansi">Instansi:</label>
+      <input type="text" class="form-control" id="instansi" placeholder="Masukkan instansi">
+    </div>
+    <button type="submit" class="btn btn-primary">Kirim</button>
+  </form>
+</div>
