--- a/modul  4 tes 2.html
+++ b/modul  4 tes 2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Website Perpustakaan SUKA BACA</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<style>
 		.col-md-4 {
 			background-color: #f0f0f0;
@@ -12,31 +12,26 @@
 	</style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Perpustakaan SUKA BACA</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Buku
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Fiksi</a>
-						<a class="dropdown-item" href="#">Non-Fiksi</a>
-						<a class="dropdown-item" href="#">Buku Anak</a>
-					</div>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="#">Perpustakaan SUKA BACA</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Buku <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Fiksi</a></li>
+						<li><a href="#">Non-Fiksi</a></li>
+						<li><a href="#">Buku Anak</a></li>
+					</ul>
 				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Akun
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="#">Login</a>
-						<a class="dropdown-item" href="#">Daftar</a>
-					</div>
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Akun <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="#">Login</a></li>
+						<li><a href="#">Daftar</a></li>
+					</ul>
 				</li>
 			</ul>
 		</div>
@@ -109,28 +104,12 @@
 					</tbody>
 				</table>
 			</div>
-   <div class="col-md-4">
-  <form>
-    <div class="form-group">
-      <label for="nama">Nama:</label>
-      <input type="text" class="form-control" id="nama" placeholder="Masukkan nama">
-    </div>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Masukkan email">
-    </div>
-    <div class="form-group">
-      <label for="no_telp">No Telp:</label>
-      <input type="tel" class="form-control" id="no_telp" placeholder="Masukkan no telp">
-    </div>
-    <div class="form-group">
-      <label for="usia">Usia:</label>
-      <input type="number" class="form-control" id="usia" placeholder="Masukkan usia">
-    </div>
-    <div class="form-group">
-      <label for="instansi">Instansi:</label>
-      <input type="text" class="form-control" id="instansi" placeholder="Masukkan instansi">
-    </div>
-    <button type="submit" class="btn btn-primary">Kirim</button>
-  </form>
-</div>
+			<div class="col-md-4">
+				<form>
+					<div class="form-group">
+						<label for="nama">Nama:</label>
+						<input type="text" class="form-control" id="nama" placeholder="Masukkan nama">
+					</div>
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input type="email" class="form-control" id="email" placeholder="Masukkan email">
